--- a/about.html
+++ b/about.html
@@ -14,11 +14,9 @@
             <td>
                 <h3><a href="index.html">Profile</a></h3>
             </td>
+          
             <td>
-                <h3><a href="experiences.html">Experiences</a></h3>
-            </td>
-            <td>
-                <h3><a href="abilities.html">Abilities</a></h3>
+                <h3><a href="about.html">Abilities</a></h3>
             </td>
             <td>
                 <h3><a href="projects.html">Projects</a></h3>
@@ -29,14 +27,16 @@
         </tr>
     </table> 
     <hr> 
-    <h1 style="text-align: center; font-family: cursive;">Abilities</h1> 
+    <h1 style="text-align: center; font-family: cursive;">About</h1> 
     <!-- Reference: Aclonica Font -->
     <link href='https://fonts.googleapis.com/css?family=Aclonica'rel='stylesheet'> 
     <h4 style="text-align: center; font-family: Aclonica; font-weight:normal"><i>
-        "Ability is what you are capable of doing. Motivation determines what you do. 
-        Attitude determines how well you do it"</i></h4>
+        "Personal Info"</i></h4>
     <h5 style="text-align: center; font-family: Aclonica; font-weight:normal">
-            --- Lou Holtz ---</h5>
+            Name:Surarot Jeen-On         
+            Age: 18 Years Old 
+            Email:surarot.jeen@bumail.net
+            Address:Singburi,Thailand 16000 </h5>
     <h2 style="text-align: center;">Skills</h2> 
     <table style="margin-left: auto; margin-right: auto" cellspacing="30"> <!--- border="1">-->
         <tr>
