--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Abhisit's Contact</title>
+    <title>Surarot Contact</title>
 </head>
 
 <body>
@@ -18,7 +18,7 @@
                 <h3><a href="experiences.html">Experiences</a></h3>
             </td>
             <td>
-                <h3><a href="abilities.html">Abilities</a></h3>
+                <h3><a href="about.html">Abilities</a></h3>
             </td>
             <td>
                 <h3><a href="projects.html">Projects</a></h3>
